--- a/src/public/css/layout/common.css
+++ b/src/public/css/layout/common.css
@@ -2,6 +2,18 @@ html {
     font-size: 62.5%;
 }
 
+figure {
+    margin: 0;
+}
+
+p {
+    font-size: 1.4rem;
+}
+
+i {
+    font-size: 1.6rem;
+}
+
 :root {
     /* padding */
     --v-space: clamp(30px, 9vw, 50px);
@@ -18,6 +30,7 @@ html {
     width: min(92%, 1230px);
     margin: auto;
 }
+
 /* ここまで */
 
 .header {
