--- a/src/public/css/user/item.css
+++ b/src/public/css/user/item.css
@@ -1,4 +1,4 @@
-.item-detail-container {
+.item-detail__inner {
     padding: var(--v-space) 0;
     display: flex;
     flex-direction: row-reverse;
@@ -6,37 +6,31 @@
     gap: 150px;
 }
 
-/* 商品画像 */
-.item-detail-img__item {
-    max-width: 100%;
-    height: auto;
-}
-
 /* コメントページと共有 */
 /* タイトル */
-.title-decoration {
+.item-detail-about__title {
     font-size: 3.0rem;
     margin-top: 0;
 }
 
 /* ブランド名 */
-.item-brand-decoration {
+.item-detail-about__brand {
     margin-top: -20px;
 }
 
 /* 値段 */
-.item-price-decoration {
+.item-detail-about__price {
     font-size: 1.8rem;
 }
 
 /* フォーム */
-.item-form {
+.item-detail-form__content {
     display: flex;
     gap: 30px;
 }
 
 /* 購入ページのボタンと共有 */
-.item-detail-link {
+.item-detail-about__link {
     background-color: var(--main-color);
     color: #fff;
     display: inline-block;
@@ -50,18 +44,33 @@
 /* 共有ここまで */
 
 /* 商品説明 */
-.item-detail__description-title {
+.item-detail-about-description__title {
     font-size: 2.4rem;
 }
 
 /* カテゴリー */
-.item-detail__description-caption {
+.item-detail-about-category__title {
     font-size: 1.6rem;
 }
 
-/* 商品の状態、レイアウト */
-.item-detail__description-layout {
+.item-detail-about-layout {
     display: flex;
     align-items: center;
     gap: 30px;
+}
+
+.item-detail-about-category__text {
+    background-color: #cbcbcb;
+    border-radius: 20px;
+    padding: 3px 10px;
+}
+
+.item-detail-about-condition__title {
+    font-size: 1.6rem;
+}
+
+/* 商品画像 */
+.item-detail-img__item {
+    max-width: 100%;
+    height: auto;
 }
