--- a/src/public/css/user/address.css
+++ b/src/public/css/user/address.css
@@ -2,28 +2,28 @@
     text-align: center;
 }
 
-.address-form {
+.address-form__content{
     max-width: 500px;
     width: 100%;
     margin: 50px auto 0;
 }
 
-.address-form__input:not(:first-of-type),
-.address-form__button {
+.address-form__content-input:not(:first-of-type),
+.address-form__content-button {
     margin-top: 30px;
 }
 
-.address-form__input-label {
+.address-form__content-input-label {
     font-weight: 600;
 }
 
-.address-form__input-text {
+.address-form__content-input-text {
     display: block;
     text-align: center;
     width: 100%;
 }
 
-.address-form__button {
+.address-form__content-button {
     background-color: var(--main-color);
     border: none;
     border-radius: 4px;
