--- a/src/public/css/user/index.css
+++ b/src/public/css/user/index.css
@@ -1,8 +1,8 @@
-.items-container {
+.items__inner {
     padding: var(--v-space) 0;
 }
 
-.items-tab {
+.items__tab {
     max-width: 1230px;
     margin: 0 auto ;
     padding-left: 150px;
@@ -11,20 +11,28 @@
     gap: 40px;
 }
 
-.items-tab__link {
+.items__tab-link {
     color: #000;
     font-size: 1.6rem;
     font-weight: 600;
     text-decoration: none;
 }
 
-.items-tab__link-text--default {
+.items__tab-link-text {
     color: var(--main-color);
 }
 
-.grid-container {
+.items__tab-link-text--gray {
+    color: var(--sub-color);
+}
+
+.items-card__content {
     display: grid;
+    row-gap: 30px;
     grid-template-columns: repeat(5, 1fr);
     padding-top: 30px;
 }
 
+.items-card__content-img {
+    margin: 0 auto;
+}
